--- a/index.html
+++ b/index.html
@@ -121,10 +121,10 @@
         </div> -->
         <footer class="footer">
 			<div class="footer-left">
-				<img src="logo.jpeg" alt="" height="100" width="100">
-				<p> JAIT solution counts on one of the fastest moving web development and completes suite of software development, Android and IOS app development, Computer training and SEO together with offering different IT-related training courses!</p>
-				<div>
-					<a href="https://www.facebook.com/pages/category/Software-Company/JA-It-Solution-114924523528573/"><i class="fa fa-facebook"></i></a>
+				<!-- <img src="" alt="" height="100" width="100"> -->
+				<p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet labore iusto omnis, dignissimos cum est molestiae sequi quidem atque pariatur quo fugit deleniti et officiis! Numquam temporibus voluptate aut quae.</p>
+                <div>
+					<a href="#"><i class="fa fa-facebook"></i></a>
 					<a href="https://twitter.com/"><i class="fa fa-twitter"></i></a>
 					<a href=""><i class="fa fa-dribbble"></i></a>
 					<a href="https://youtube.com/"><i class="fa fa-youtube"></i></a>
@@ -155,8 +155,8 @@
 				<li>
 					<h2>Address</h2>
 					<ul class="box">
-						<li><a href="https://www.google.com/maps/place/Birgunj/@27.0474286,84.8029716,12z/data=!3m1!4b1!4m5!3m4!1s0x39935446b21c98cb:0x42938e30ff4f6cb5!8m2!3d27.0449005!4d84.8672171">Birgunj</a></li>
-						<li><a href="https://www.google.com/maps/place/Nepal/@28.3236393,79.6362605,6z/data=!3m1!4b1!4m5!3m4!1s0x3995e8c77d2e68cf:0x34a29abcd0cc86de!8m2!3d28.394857!4d84.124008">Nepal</a></li>
+						<li><a href="https://www.google.com/maps/place/Raxaul,+Bihar,+India/@26.9805722,84.8259381,14z/data=!3m1!4b1!4m6!3m5!1s0x3993515252feb2fb:0x98334e294cd62157!8m2!3d26.9797677!4d84.8515804!16zL20vMGYyOF81">Raxual</a></li>
+						<li><a href="https://www.google.com/maps/place/India/@19.6916297,61.0320523,4z/data=!3m1!4b1!4m6!3m5!1s0x30635ff06b92b791:0xd78c4fa1854213a6!8m2!3d20.593684!4d78.96288!16zL20vMDNyazA">India</a></li>
 						<li><a href="https://www.google.com/maps/search/united+nation/@28.3463317,84.1219528,7.01z">United Nation</a></li>
 					</ul>
 				</li>
