--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
         </div> -->
         <footer class="footer">
 			<div class="footer-left">
-				<!-- <img src="" alt="" height="100" width="100"> -->
+				<img src="https://constant.myntassets.com/web/assets/img/icon.5d108c858a0db793700f0be5d3ad1e120a01a500_2021.png" alt="" height="100" width="100">
 				<p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet labore iusto omnis, dignissimos cum est molestiae sequi quidem atque pariatur quo fugit deleniti et officiis! Numquam temporibus voluptate aut quae.</p>
                 <div>
 					<a href="#"><i class="fa fa-facebook"></i></a>
